Fri Dec  1 11:26:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ExecutionManager/Execution_Manager.cpp:
          Fixed invalid check whether we have a nil POA or not

Fri Dec  1 11:17:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/TargetManager/Deployment_Configuration.{h,cpp}:
          Removed these files, not used in the mpc file

        * DAnCE/DomainApplicationManager/Deployment_Configuration.{h,cpp}:
          Close the file handle, part of the fix for bugzilla bug 2733

        * DAnCE/TargetManager/DomainDataManager.{h,cpp}:
          Const changes, sequences have a CORBA::ULong as length, not int.
          Added some todo's and use a little bit more ACE

        * DAnCE/TargetManager/TargetManager.cidl:
          Removed empty line

        * DAnCE/TargetManager/TargetManager_exec.cpp:
          Fixed memory management and the way we check for a nil
          reference

Fri Dec  1 09:01:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_component_mpc.pl:
          Layout improvements, thanks to Abdul for making this
          update.

Thu Nov 30 12:45:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ExecutionManager/Execution_Manager.cpp:
          Removed not needed ACE_TRY_CHECK

        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
        * DAnCE/ExecutionManager/Execution_Manager_Impl.h:
          Const improvement

        * DAnCE/RepositoryManager/RepositoryManager.cpp:
          Initialise pointer with 0, removed code after return
          added added a todo

        * DAnCE/RepositoryManager/RepositoryManager_Impl.h:
          Doxygen improvement

        * DAnCE/RepositoryManager/ZIP_Wrapper.cpp:
          Lot of layout changes to make the code a little bit more
          readable, more has to be done to this file

        * DAnCE/RepositoryManager/ZIP_Wrapper.h:
          Doyxgen improvements and removed not needed include
