@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-  
+
   <meta name="generator" content="HTML Tidy for Mac OS X (vers 1st December 2004), see www.w3.org" />
 
 
-  
+
   <title>Building a Stock Quoter with TAO - A Tutorial</title>
 <!-- $Id$ -->
 </head>
@@ -15,13 +15,13 @@
 
 <body style="color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);" link="#000fff" vlink="#ff0f0f">
 
-  
+
 <h3>Building a Stock Quoter with CoSMIC and DAnCE - A
   Tutorial<br />
 </h3>
 
 
-  
+
 <p>This tutorial provides a step-by-step lesson on developing
   component-based distributed applications using <a href="http://www.dre.vanderbilt.edu/cosmic/">CoSMIC</a> modeling
   toolkit and <a href="http://www.cs.wustl.edu/%7Eschmidt/CIAO.html">CIAO/DAnCE</a>
@@ -41,7 +41,7 @@
 </p>
 
 
-  
+
 <div style="text-align: center;">
     <img alt="" src="Images/fig1.jpg" style="width: 362px; height: 193px;" /><br />
 
@@ -52,7 +52,7 @@
   </div>
 
 
-  
+
 <p>This tutorial will show you how to use generic modeling
   techniques <a href="http://www.dre.vanderbilt.edu/cosmic/">CoSMIC</a> to assist the
   development process of CIAO applications. All the necessary steps
@@ -60,9 +60,9 @@
   documented here.</p>
 
 
-  
+
 <blockquote>
-    
+
   <hr />
     <strong>Note:</strong><br />
 
@@ -77,7 +77,7 @@
     CosMIC 0.5.2. It will be subject to change as version of GME
     and CoSMIC evolves.<br />
 
-    
+
   <hr />
   </blockquote>
 <strong><big>Prerequisites</big></strong><br />
@@ -86,13 +86,13 @@
 
   &nbsp;&nbsp;&nbsp;Before you start, you will need the following:
 
-  
+
 <ol>
 
     <li><strong>ACE+TAO+CIAO (Component Integraated ACE
     ORB).</strong> ACE + TAO + CIAO provide the CCM infrastructure
     necessary to enable the CCM-based distributed component
-    interaction. You can click <a href="http://deuce.doc.wustl.edu/Download.html">here</a> to download
+    interaction. You can click <a href="http://download.dre.vanderbilt.edu">here</a> to download
     the latest ACE + TAO + CIAO and click <a href="../../../../../ACE-Install.html">
     here</a> for information on how to build ACE+TAO+CIAO.</li>
 
@@ -107,18 +107,18 @@
     <li><strong>CoSMIC toolkit.</strong> Click <a href="http://www.dre.vanderbilt.edu/cosmic/">here</a> to download
     the latest CoSMIC release.</li>
 
-  
+
 </ol>
 
 
-  
+
 <blockquote>
-    
+
   <hr />
     <strong>Note:</strong><br />
 
 
-    
+
   <ol>
 
       <li>Please use only the version of GME that the CoSMIC
@@ -128,10 +128,10 @@
 
       <li>Make sure you install GME before you install CoSMIC.</li>
 
-    
+
   </ol>
 
-    
+
   <hr />
   </blockquote>
 <strong><a href="01.html">Getting
@@ -180,10 +180,10 @@
 
   <br />
 
-  
+
 <hr />
 
-  
+
 <address>
     <a href="mailto:ming.xiong@vanderbilt.edu">Ming Xiong<br />
 </a>
