@@ -486,7 +486,7 @@ style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 (Component Integraated ACE ORB).</span></b><span style='color:black'> ACE + TAO
 + CIAO provide the CCM infrastructure necessary to enable the CCM-based distributed
 component interaction. You can click <a
-href="http://deuce.doc.wustl.edu/Download.html">here</a> to download the latest
+href="http://download.dre.vanderbilt.edu">here</a> to download the latest
 ACE + TAO + CIAO and click <a
 href="http://www.cs.wustl.edu/%7Eschmidt/ACE_wrappers/TAO/CIAO/CIAO-INSTALL.html">here</a>
 for information on how to build ACE+TAO+CIAO.<o:p></o:p></span></p>
